--- a/HackyFox/HackyFox.csproj
+++ b/HackyFox/HackyFox.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="MySql.Data" Version="9.3.0" />
   </ItemGroup>
 
